web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-param-lhs/module-parent-async-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,33)
2|    const child = function name(await) {
 |                               ^
